# micromachines

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  config.cfg  install.sh  install_all.sh  requirements.txt
Box2dSFMLTestings/: Border.cpp  Border.h  CMakeLists.txt  Car.cpp  Car.h  Juego.cpp  Juego.h  Testing  main.cpp
FourTiresModel(project)/: Boosts.h  Border.cpp  Border.h  CMakeLists.txt  Car.cpp  Car.h  CarBody.cpp  CarBody.h  CarTire.cpp  CarTire.h  CrashObject.cpp  CrashObject.h  Health.cpp  Health.h  HealthBooster.h  HealthBox.cpp  HealthBox.h  Juego.cpp  Juego.h  Oil.h  ProccessContact.cpp  ProccessContact.h  ProcessContact.cpp  ProcessContact.h  Stone.h  Testing  Tire.cpp  Tire.h  World.cpp  World.h  main.cpp
FourTiresModel(project)/Box2D/: CMakeLists.txt
FourTiresModel(project)/Box2D/Box2D/Box2D/Dynamics/Joints/: b2GearJoint.h
FourTiresModel(project)/otherEntities/: SpeedBooster.cpp  SpeedBoster.h  Stone.cpp  Stone.h
FourTiresModel(project)/share/SFML/doc/html/: Audio_2Export_8hpp_source.html  Audio_8hpp_source.html  CircleShape_8hpp_source.html  Clipboard_8hpp_source.html  Clock_8hpp_source.html  ContextSettings_8hpp_source.html  ConvexShape_8hpp_source.html  Cursor_8hpp_source.html  Drawable_8hpp_source.html  Ftp_8hpp_source.html  GlResource_8hpp_source.html  GpuPreference_8hpp.html  GpuPreference_8hpp_source.html  Graphics_2Export_8hpp_source.html  Image_8hpp_source.html  InputSoundFile_8hpp_source.html  InputStream_8hpp_source.html  IpAddress_8hpp_source.html  Joystick_8hpp_source.html  Keyboard_8hpp_source.html  Listener_8hpp_source.html  Lock_8hpp_source.html  Music_8hpp_source.html  NativeActivity_8hpp_source.html  Network_2Export_8hpp_source.html  Network_8hpp_source.html  NonCopyable_8hpp_source.html  OpenGL_8hpp_source.html  OutputSoundFile_8hpp_source.html  Packet_8hpp_source.html  PrimitiveType_8hpp_source.html  Rect_8hpp_source.html  RectangleShape_8hpp_source.html  RenderStates_8hpp_source.html  RenderWindow_8hpp_source.html  Shape_8hpp_source.html  Sleep_8hpp_source.html  SocketHandle_8hpp_source.html  SoundBufferRecorder_8hpp_source.html  SoundFileFactory_8hpp_source.html  (+210 more)
Model/: CMakeLists.txt  Car.cpp  Car.h  CollisionsProcessor.h  Curve.h  Entity.cpp  Entity.h  Health.h  HealthBooster.cpp  HealthBooster.h  Juego.cpp  Juego.h  Oil.cpp  Oil.h  Stone.cpp  Testing  Tire.cpp  Tire.h  World.cpp  World.h  config.cfg
Model/otherEntities/: Oil.cpp  Oil.h
client/: main.cpp
common/: Socket.cpp  Thread.cpp  common_Socket.cpp  common_Socket.h  common_SocketException.h  common_Thread.cpp
media/maps/: complex.map  lazy.map  simple.json  simple.map
pluginsResolverConflictos/: DecreaseSpeed.cpp
realplugins/: AddOil.h  AddStone.h  IncreaseSpeed.cpp
server/: Game.h  Health.cpp  LobbyClientAcceptor.cpp  LobbyClientAcceptor.h  LobbyClientOperator.h  LobbyGamesManager.cpp  main.cpp
src/client/: Action.cpp  Action.h  AnimatedSprite.cpp  AnimatedSprite.h  Animation.h  Audio.cpp  Audio.h  BaseSprite.cpp  BaseSprite.h  Camera.cpp  Camera.h  CameraWidget.h  Car.cpp  (+60 more)
src/server/: CMakeCache.txt  CMakeLists.txt  Car.cpp  Car.h  Client.cpp  Client.h  ClientProxy.cpp  ClientProxy.h  CollisionsProcessor.h  ConfigMapBuilder.cpp  ConfigMapBuilderException.h  EntitiesManager.cpp  EntitiesManager.h  Entity.h  Game.cpp  Game.h  GamesAdministrator.cpp  GamesAdministrator.h  GamesAdministratorException.h  Health.h  LobbyClientAcceptor.cpp  LobbyClientAcceptor.h  LobbyClientOperator.cpp  LobbyClientReceptionist.cpp  LobbyClientReceptionist.h  LobbyGamesManager.h  LobbyGamesOrganizer.cpp  LobbyGamesOrganizer.h  Makefile  Match.cpp  Match.h  MatchesAdministrator.cpp  MatchesAdministrator.h  MatchesAdministratorException.h  ModelSerializer.cpp  ModelSerializer.h  ModelStatusSerializer.cpp  ModelStatusSerializer.h  PluginsReader.cpp  PluginsReader.h  (+21 more)
src/server/Box2D/: CMakeCache.txt  Makefile  cmake_install.cmake
src/server/entities/: Car.cpp  Car.h  Checkpoint.cpp  Checkpoint.h  CollisionsProcessor.cpp  CollisionsProcessor.h  Curve.cpp  Curve.h  Entity.cpp  Entity.h  Floor.cpp  Floor.h  GrandStand.cpp  GrandStand.h  Grandstand.cpp  Grandstand.h  Health.cpp  Health.h  HealthBooster.cpp  HealthBooster.h  Oil.cpp  Oil.h  Projectile.cpp  Projectile.h  SpeedBooster.cpp  SpeedBooster.h  Stone.cpp  Stone.h  StraightTrack.cpp  StraightTrack.h  Tire.cpp  Tire.h  Track.cpp  Track.h  World.cpp  World.h  WorldBuilder.cpp  WorldBuilder.h
src/server/matches-management/: Client.cpp  Client.h  ConfigMapBuilder.cpp  ConfigMapBuilder.h  LobbyClientAcceptor.cpp  LobbyClientAcceptor.h  LobbyClientReceptionist.cpp  LobbyClientReceptionist.h  Match.cpp  Match.h  MatchesAdministrator.cpp  MatchesAdministrator.h  ModelStatusSerializer.h  ProtectedQueue.h
src/server/model/: Car.cpp  Car.h  Checkpoint.cpp  Checkpoint.h  CollisionsProcessor.cpp  CollisionsProcessor.h  EntitiesManager.cpp  EntitiesManager.h  Entity.cpp  Entity.h  Grandstand.cpp  Grandstand.h  Grass.cpp  Grass.h  Health.cpp  Health.h  HealthBooster.cpp  HealthBooster.h  Mud.cpp  Mud.h  Oil.cpp  Oil.h  Projectile.cpp  Projectile.h  RaceJudge.cpp  RaceJudge.h  RaceManager.cpp  RaceManager.h  RaceStageBuilder.cpp  RaceStageBuilder.h  SpeedBooster.cpp  SpeedBooster.h  StageBuilder.cpp  StageBuilder.h  StatusSerializer.cpp  StatusSerializer.h  Stone.cpp  Stone.h  TimedEvent.cpp  TimedEvent.h  (+6 more)
src/server/plugins/: AddHealthBooster.cpp  AddHealthBooster.h  AddOil.cpp  AddOil.h  AddStone.cpp  CMakeLists.txt  DecreaseSpeed.cpp  DecreaseSpeed.h  IncreaseSpeed.cpp  IncreaseSpeed.h  Plugin.cpp  Plugin.h  PluginsReader.cpp  PluginsReader.h  README.md  RemoveOil.cpp
src/server/plugins-management/: Plugin.cpp  Plugin.h  PluginHandler.cpp  PluginHandler.h  PluginHandlerException.h  PluginRequestsProcessor.cpp  PluginRequestsProcessor.h  PluginsConstants.h  PluginsManager.cpp  PluginsManager.h
src/server/plugins-management/plugins/: CMakeLists.txt  DecreaseSpeedIfDamaged.cpp  DecreaseSpeedIfDamaged.h  DeleteMudZones.cpp  DeleteMudZones.h  Example.cpp  Example.h  IncreaseSpeedIfLast.cpp  IncreaseSpeedIfLast.h  Test.cpp  Test.h
(+229 files in other folders)
